[gd_scene load_steps=9 format=3 uid="uid://deoad2bn73e38"]

[ext_resource type="Texture2D" uid="uid://dn7d8v3k06hv2" path="res://assets/player/parrot.png" id="1_hxgug"]
[ext_resource type="Script" path="res://scenes/animal/animal.gd" id="1_kl2g8"]
[ext_resource type="Texture2D" uid="uid://d20hse2aqkae3" path="res://assets/items/arrow.png" id="3_0un0p"]
[ext_resource type="AudioStream" uid="uid://el2beydrkqqe" path="res://assets/audio/stretch2.ogg" id="4_e31et"]
[ext_resource type="AudioStream" uid="uid://cjm7pjstho1hm" path="res://assets/audio/catapult.ogg" id="5_73ji1"]
[ext_resource type="AudioStream" uid="uid://du1hbl3kfxjj1" path="res://assets/audio/kick_wood.ogg" id="6_pvjwk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pktgg"]
bounce = 0.25

[sub_resource type="CircleShape2D" id="CircleShape2D_fbrhh"]
radius = 19.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_pktgg")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_kl2g8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_hxgug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fbrhh")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, -7.15256e-07)
scale = Vector2(2, 2)

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_0un0p")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e31et")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_73ji1")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pvjwk")
volume_db = -10.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
